Closed
Bug 308778
Opened 20 years ago
Closed 20 years ago
setting fantasy football sportsline.com [@ MimeTypeArrayImpl::GetMimeTypes]
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
()
Details
(Keywords: crash, verified1.8.1.1)
Crash Data
Attachments
(1 obsolete file)
Incident ID: 8985126
Stack Signature MimeTypeArrayImpl::GetMimeTypes bc51d676
Product ID Firefox10
Build ID 2005071605
Trigger Time 2005-09-02 19:31:28.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module firefox.exe + (00201212)
URL visited
User Comments setting fantasy football sportsline.con
Since Last Crash 37592 sec
Total Uptime 37592 sec
Trigger Reason Access violation
Source File, Line No. c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/dom/src/base/nsMimeTypeArray.cpp, line
218
Stack Trace
MimeTypeArrayImpl::GetMimeTypes [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/dom/src/base/nsMimeTypeArray.cpp, line
218]
MimeTypeArrayImpl::GetLength [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/dom/src/base/nsMimeTypeArray.cpp, line 82]
XPCWrappedNative::CallMethod [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp,
line 2034]
XPC_WN_GetterSetter [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops
.cpp, line 1813]
js_Invoke [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsinterp.c, line 955]
js_InternalInvoke [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsinterp.c, line 1049]
js_InternalGetOrSet [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsinterp.c, line 1092]
js_GetProperty [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsobj.c, line 2785]
XPC_WN_JSOp_Safe_GetProperty [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops
.cpp, line 1297]
js_Interpret [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsinterp.c, line 2829]
js_Execute [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsinterp.c, line 1176]
JS_EvaluateUCScriptForPrincipals [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/js/src/jsapi.c, line 3649]
nsJSContext::EvaluateString [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/dom/src/base/nsJSEnvironment.cpp, line
946]
nsScriptLoader::EvaluateScript [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/content/base/src/nsScriptLoader.cpp, line
668]
nsScriptLoader::ProcessRequest [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/content/base/src/nsScriptLoader.cpp, line
581]
nsScriptLoader::OnStreamComplete [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/content/base/src/nsScriptLoader.cpp, line
905]
nsStreamLoader::OnStopRequest [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/netwerk/base/src/nsStreamLoader.cpp, line
144]
nsHTTPCompressConv::OnStopRequest [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/netwerk/streamconv/converters/nsHTTPCompre
ssConv.cpp, line 125]
nsInputStreamPump::OnStateStop [c:/builds/tinderbox/Fx-
Aviary1.0.1/WINNT_5.2_Depend/mozilla/netwerk/base/src/nsInputStreamPump.cpp,
line 499]
0x01e4e868
nsHttpChannel::`vftable'
nsHttpChannel::AddRef
0xdf58e908
Attachment #196290 -
Flags: superreview?(jst)
Attachment #196290 -
Flags: review?(jst)
Comment 3•20 years ago
|
||
Comment on attachment 196290 [details] [diff] [review]
null check
r+sr=jst, and feel free to make plugin a nsCOMPtr while you're at it.
Attachment #196290 -
Flags: superreview?(jst)
Attachment #196290 -
Flags: superreview+
Attachment #196290 -
Flags: review?(jst)
Attachment #196290 -
Flags: review+
Comment on attachment 196290 [details] [diff] [review]
null check
mozilla/dom/src/base/nsMimeTypeArray.cpp 1.26
i did switch this to a comptr
Attachment #196290 -
Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 5•19 years ago
|
||
*** Bug 359103 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Attachment #196290 -
Flags: approval1.8.1.1?
Comment 6•19 years ago
|
||
Comment on attachment 196290 [details] [diff] [review]
null check
approved for 1.8 branch, a=dveditz for drivers
Attachment #196290 -
Flags: approval1.8.1.1? → approval1.8.1.1+
Comment 8•19 years ago
|
||
v.fixed on 1.8.1 branch based on code inspection, cvs log check, and quick look at Talkback data.
Keywords: fixed1.8.1.1 → verified1.8.1.1
Comment 9•16 years ago
|
||
This was undone later for some reason...
Comment 10•16 years ago
|
||
(In reply to comment #9)
> This was undone later for some reason...
Ignore that, sorry for the spam.
Updated•14 years ago
|
Crash Signature: [@ MimeTypeArrayImpl::GetMimeTypes]
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•