Bug 308778 setting fantasy football sportsline.com [@ MimeTypeArrayImpl::GetMimeTypes] r=jst sr=jst